hphp/hack/test/typecheck/class_refinements/runner-pattern.php.exp
ERROR: File "runner-pattern.php", line 20, characters 13-16:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
ERROR: File "runner-pattern.php", line 37, characters 12-17:
A `where` type constraint is violated here (Typing[4323])
  File "runner-pattern.php", line 24, characters 19-24:
  This is the method with `where` type constraints
  File "runner-pattern.php", line 25, characters 17-39:
  Expected a class with `{type T = _}`
  File "runner-pattern.php", line 16, characters 20-23:
  But got `TBox as Box`
  File "runner-pattern.php", line 25, characters 9-12:
    via this generic `TBox`
ERROR: File "runner-pattern.php", line 37, characters 12-17:
A `where` type constraint is violated here (Typing[4323])
  File "runner-pattern.php", line 24, characters 19-24:
  This is the method with `where` type constraints
  File "runner-pattern.php", line 25, characters 17-39:
  Expected a class with `{type T = _}`
  File "runner-pattern.php", line 16, characters 20-23:
  But got `TBox as Box`
  File "runner-pattern.php", line 25, characters 9-12:
    via this generic `TBox`
  File "runner-pattern.php", line 25, characters 17-39:
  Expected a class with `{type T = _}`
  File "runner-pattern.php", line 16, characters 28-30:
  But got `Box`
